objects/Complaints__c/Complaints__c.object-meta.xml
<CustomObject>
    <description>Used to record customer complaints.</description>
    <label>Complaint</label>
    <nameField>
        <displayFormat>CC{000000}</displayFormat>
        <label>Compliant Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Complaints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>