objects/Complaints__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <inlineHelpText>Measures put in place to ensure that a similar complaint does not reoccur.</inlineHelpText>
    <label>Action</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>