objects/Complaints__c/fields/Categories__c.field-meta.xml
<CustomField>
    <fullName>Categories__c</fullName>
    <label>Categories</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Error</fullName>
            </value>
            <value>
                <fullName>Communication - Reactive</fullName>
            </value>
            <value>
                <fullName>Communication - Sales</fullName>
            </value>
            <value>
                <fullName>Communication - Service</fullName>
            </value>
            <value>
                <fullName>Dispatch</fullName>
            </value>
            <value>
                <fullName>Invoice Queries</fullName>
            </value>
            <value>
                <fullName>Projects</fullName>
            </value>
            <value>
                <fullName>Technician Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>