objects/Complaints__c/fields/Complaints_To__c.field-meta.xml
<CustomField>
    <fullName>Complaints_To__c</fullName>
    <description>The complaints will be sent to the value whic comes to this field.</description>
    <inlineHelpText>Complaints Owner</inlineHelpText>
    <label>Complaints To</label>
    <type>Email</type>
</CustomField>