objects/Complaints__c/fields/Create_Date__c.field-meta.xml
<CustomField>
    <fullName>Create_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>