objects/Complaints__c/fields/Gift__c.field-meta.xml
<CustomField>
    <fullName>Gift__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gift</label>
    <referenceTo>Technician_Compliance__c</referenceTo>
    <relationshipLabel>Complaints</relationshipLabel>
    <relationshipName>Complaints</relationshipName>
    <type>Lookup</type>
</CustomField>