objects/Complaints__c/fields/Holding_Response_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Holding_Response_Date_Time__c</fullName>
    <label>Holding Response Date/Time</label>
    <type>DateTime</type>
</CustomField>