objects/Complaints__c/fields/Passed_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Passed_To_Email__c</fullName>
    <label>Passed To Email</label>
    <type>Email</type>
</CustomField>