objects/Complaints__c/fields/Reported_to_Manager__c.field-meta.xml
<CustomField>
    <fullName>Reported_to_Manager__c</fullName>
    <label>Reported to Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>