objects/Complaints__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <label>Resolved?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Waiting Customer Comfirmation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>