objects/Complaints__c/fields/Service_Department__c.field-meta.xml
<CustomField>
    <fullName>Service_Department__c</fullName>
    <description>This field Pull through the value from the Customer/Site object department value</description>
    <formula>TEXT(Customer_Site__r.Service_Department__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field Pull through the value from the Customer/Site object department value based on the Shipping Postal Code value.</inlineHelpText>
    <label>Service Department</label>
    <type>Text</type>
</CustomField>