objects/Complaints__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Action__c</columns>
    <columns>Complaint_Details__c</columns>
    <columns>Customer_Site__c</columns>
    <columns>Department__c</columns>
    <columns>Gift__c</columns>
    <columns>Gift_Sent__c</columns>
    <columns>Recorded_By__c</columns>
    <columns>Reported_to_Manager__c</columns>
    <columns>Resolution_Details__c</columns>
    <columns>Resolved__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>